# panda-autograsp

./: .bumpversion.cfg  .coverage  .gitignore  .gitmodules  .gitmodules.swo  .gitmodules.swp  .singularity_bashrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENCE  LICENSE  MANIFEST.in  Missing steps.txt  README.md  calib_results.npz  genindex.html  index.html  missing_deps.txt  missingdeps.txt  myfile.txt  myscript.cprof  objects.inv  output.txt  panda_autograsp.code-workspace  panda_autograsp.def  panda_autograsp_kinetic.def  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  test2.npy  test3.npy  test_resize.cprof  test_resize2.cprof  workspace.code-workspace
panda_autograsp/: .CMakeLists.txt.swp  CHANGELOG.md  CMakeLists.txt  GBD_documentation.md  GQCNN_documentation.md  LICENSE  MANIFEST.in  README.md  __init__.py  calibration.py  functions.py  grasp_planner.py  loggers.py  package.xml  panda_autograsp.code-workspace  pytest.ini  setup.py
panda_autograsp/bundles/: Marker012.xml  MarkerBox10.xml  MarkerData_8_9_10.xml  MarkerData_8_9_10_2.xml
panda_autograsp/cfg/: CalibFrames.cfg  calib_frame_dyn_reconf.cfg  calib_frame_pose.yaml  calib_frames_poses.yaml  main_config.yaml  moveit_scene_constraints.yaml
panda_autograsp/cfg/_cfg/: aruco_config.dict  gqcnn_parms.yaml  sensors.yaml
panda_autograsp/data/calib/: README.md  calib_results.npz
panda_autograsp/include/: octomap_server.h
panda_autograsp/launch/: ar_bundle.launch  ar_bundle_depth.launch  ar_cube.launch  ar_detect.launch  ar_indiv.launch  iiwa_moveit.launch  kinect2_bridge.launch  launch_example.launch  moveit_random_planner.launch  moveit_rviz.launch  moveit_rviz_panda_only.launch  moveit_test.launch  panda_autograsp.launch  panda_autograsp.rviz  panda_autograsp_rviz.launch  panda_autograsp_test.launch  panda_gazebo.launch  panda_moveit_config.launch  panda_rviz.launch  panda_test.launch  pick_and_place_tutorial.launch  planning_context.launch  rs_bridge.launch  simulation.launch  test.launch  tf_test_autograsp.launch
panda_autograsp/models/example_training_dataset_pj/grasps/: config.json  (+1 more)
panda_autograsp/msg/: GQCNNGrasp.msg
panda_autograsp/nodes/: calib_frame_tf2_broadcaster.py  compute_grasp_server.py  grasp_planner_client.py  grasp_planner_server.py  moveit_planner_server.py  moveit_random_planner_client.py  panda_autograsp_cli.py  panda_autograsp_server.py  tf2_broadcaster.py
panda_autograsp/panda_autograsp/: loggers.py
panda_autograsp/requirements/: cpu_requirements.txt  dev_requirements.txt  docs_dev_requirements.txt  docs_requirements.txt  gpu_requirements.txt
panda_autograsp/ros_nodes/: camera_frame_tf2_broadcaster.py  grasp_planner_client.py  grasp_planner_req_server.py  grasp_planner_server.py  moveit_control.py  moveit_pick_and_place_tutorial.py  moveit_planner_client.py  moveit_planner_server.py  moveit_random_planner_client.py  panda_autograsp_cli.py  panda_autograsp_node.py  panda_autograsp_server.py
panda_autograsp/sandbox/: compute_grasp_server.py  find_files.py  fixed_broadcaster.py  object_detection.py  pick_place_example.py  pose_test.py  prompt_test.py  read_yaml.py  regrasp.yaml  static_calib_frame_tf2_broadcaster.py  test_clear_octomap_srv.py  test_octomap.py  test_yes_no.py
panda_autograsp/sandbox/archive/: charuco_pose_estimation.py  charuco_test_2.py  compute_grasp_server.py  create_aruco_markers.py  detect_pose_charuco_board.py  detect_pose_charuco_board2.py  generate_arucoboard.py  generate_charucoboard.py  grasp_planner_client.py  test_transform.py  test_yes_no.py
panda_autograsp/scripts/: aruco_pose_estimation.py  auto_lab_perception_calibration.py  chessboard_calibration.py  franka_to_laptop.sh  generate_arucoboard.py  gqcnn_grasp_planner.py  grasp_planner.py  kinect_processing.py  laptop_to_franka.sh  listener.py  plan_grasp.py  test_clear_octomap.py
panda_autograsp/src/: .robot_control_node.cpp.swp  octomap_server.cpp  octomap_server_node.cpp
panda_autograsp/src/panda_autograsp/: __init__.py  __main__.py  functions.py  grasp_planner.py  grasp_planner_backup.py  loggers.py  moveit_collision_objects.py  moveit_planner_server_ros.py  panda_autograsp_server_ros.py  ros_grasp_planner.py  tf2_broadcaster_ros.py
panda_autograsp/src/panda_autograsp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
panda_autograsp/srv/: CalibrateSensor.srv  CloseGripper.srv  ComputeGrasp.srv  ExecuteGrasp.srv  ExecuteGripperPlan.srv  ExecutePlan.srv  OpenGripper.srv  PlanGrasp.srv  PlanGripper.srv  PlanPlace.srv  PlanToJoint.srv  PlanToPath.srv  PlanToPoint.srv  PlanToRandomJoint.srv  PlanToRandomPath.srv  PlanToRandomPoint.srv  RequestGraspPlanning.srv  ResetOctomap.srv  SetGripperClosed.srv  SetGripperOpen.srv  SetGripperWidth.srv  SetSensorPose.srv  VisualizeGrasp.srv  VisualizePlan.srv
(+2267 files in other folders)
