<?xml version="1.0"?>
<package format="2">
  <name>panda_autograsp</name>
  <version>1.0.3</version>
  <description>The panda_autograsp package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rick.staa@outlook.com">ricks</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/panda_autograsp</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <!-- Build tool dependencies-->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Run dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <!-- Additional dependencies -->
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_visual_tools</depend>

  <!-- NOTE: The python dependencies can not be installed
       using the rosdep package since specific versions
       are required for tensorflow and tensorflow-estimator. -->
  <!-- My system python package dependencies -->
  <!-- <exec_depend>python-pyquaternion-pip</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-cython-pip</exec_depend>
  <exec_depend>python-pylibfreenect2</exec_depend>
  <exec_depend>python-matplotlib</exec_depend> -->

  <!-- Missing system python dependencies of submodules -->
  <!-- <exec_depend>python-ruamel.yaml</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-sklearn</exec_depend>
  <exec_depend>python-multiprocess</exec_depend>
  <exec_depend>python-setproctitle</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
